fixed responsive issues on mobile tablet

--- a/src/components/account/payBill/confirmPay.scss
+++ b/src/components/account/payBill/confirmPay.scss
@@ -59,9 +59,9 @@
 @media screen and (max-width:768px){
 	.popup{
 		height: auto;
-		width: 80%;
-		left: 10%;
-		right: 10%;
+		width: 100%;
+		left: 0%;
+		right: 0%;
 		letter-spacing: 2px;
 
 		.popup-btns button{
