--- a/src/components/account/payBill/modal.scss
+++ b/src/components/account/payBill/modal.scss
@@ -158,7 +158,10 @@
 @media screen and (max-width:425px){
 	.modal-main{
 		width: 100%;
-		top: 65%;
+		left:0;
+		.modal-title{
+			font-size: 3em;
+		}
 	}
 	.enrollDirectPay{
 		flex-direction: row;
@@ -171,6 +174,16 @@
 	.paymentSummary > div{
 		display: flex;
 		flex-direction: row;
+	}
+	.paymentMethod, .enrollDirectPay, .paymentDate, .paymentAmount, .paymentSummary, .paymentSubmit{
+		font-size: 0.5rem;
+	}
+	.paymentAmount{
+		justify-content: space-between;
+		.payAmount{
+			flex:0.2;
+			align-items: flex-end;
+		}
 	}
 
 
